build: Update Dockerfile JVM flags and GC algorithm